--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
+    "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
+    "qrcode": "^1.5.0",
+    "qrcode.vue": "^3.3.3",
     "vue": "^3.2.21",
+    "vue-qrcode": "^1.0.0",
+    "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
