--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.starter",
-	"appName": "QRScanner",
+	"appName": "Trafex System",
 	"webDir": "dist",
 	"bundledWebRuntime": false
 }
