--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QRScanner",
+  "name": "trafex-system",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,16 +15,14 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
-    "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
-    "qrcode": "^1.5.0",
-    "qrcode.vue": "^3.3.3",
     "vue": "^3.2.21",
-    "vue-qrcode": "^1.0.0",
     "vue-qrcode-reader": "^3.1.0",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-qr-reader": "^1.0.0",
+    "vue3-qrcode-reader": "^0.0.1"
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.0",
@@ -41,11 +39,14 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "@vue/vue3-jest": "^27.0.0-alpha.3",
+    "autoprefixer": "^10.4.2",
     "babel-jest": "^27.3.1",
     "cypress": "^8.7.0",
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   },
